--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "@types/react-dom": "^16.9.8",
         "antd": "^4.5.1",
         "classnames": "^2.2.6",
+        "jsdom": "^16.4.0",
         "lodash": "^4.17.19",
         "parcel-bundler": "^1.12.4",
         "prettier": "^2.1.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-markdown": "^4.3.1",
+        "ts-node": "^9.0.0",
         "typescript": "^3.9.7",
         "typescript-json-schema": "^0.43.0",
         "unist-util-visit": "^2.0.3"
