--- a/package.json
+++ b/package.json
@@ -7,22 +7,30 @@
         "dev": "parcel src/index.html"
     },
     "dependencies": {
+        "@sozialhelden/fetch-cache": "^2.0.1",
+        "@types/jsdom": "^16.2.4",
         "@types/lodash": "^4.14.158",
         "@types/node": "^14.6.4",
+        "@types/node-fetch": "^2.5.7",
         "@types/react": "^16.9.44",
         "@types/react-dom": "^16.9.8",
+        "@types/turndown": "^5.0.0",
+        "@types/yargs": "^15.0.5",
         "antd": "^4.5.1",
         "classnames": "^2.2.6",
         "jsdom": "^16.4.0",
         "lodash": "^4.17.19",
+        "node-fetch": "^2.6.1",
         "parcel-bundler": "^1.12.4",
         "prettier": "^2.1.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-markdown": "^4.3.1",
         "ts-node": "^9.0.0",
+        "turndown": "^6.0.0",
         "typescript": "^3.9.7",
         "typescript-json-schema": "^0.43.0",
-        "unist-util-visit": "^2.0.3"
+        "unist-util-visit": "^2.0.3",
+        "yargs": "^15.4.1"
     }
 }
