--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@sozialhelden/fetch-cache": "^2.0.1",
+        "@types/cheerio": "^0.22.22",
         "@types/jsdom": "^16.2.4",
         "@types/lodash": "^4.14.158",
         "@types/node": "^14.6.4",
@@ -17,6 +18,7 @@
         "@types/turndown": "^5.0.0",
         "@types/yargs": "^15.0.5",
         "antd": "^4.5.1",
+        "cheerio": "^1.0.0-rc.3",
         "classnames": "^2.2.6",
         "jsdom": "^16.4.0",
         "lodash": "^4.17.19",
